<resources>
    <string name="app_name" translatable="false">Game Store</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="profile">Profile</string>
    <string name="search_the_games_that_you_like">Search the games that you want to play</string>
    <string name="search_games">Search games</string>
    <string name="search">Search</string>
    <string name="see_all">See All</string>
    <string name="category_image">Category Image</string>
    <string name="category">Category</string>
    <string name="top_games_for_you">Top Games For You</string>
    <string name="game_cover">Game Cover</string>
    <string name="top_games">Top Games</string>
    <string name="buy">Buy</string>
    <string name="detail_image">Detail Image</string>
    <string name="game_details">Game Details</string>
    <string name="detail_slider">Detail Slider</string>
    <string name="title">Title</string>
    <string name="detail_rate">Detail Rate</string>
    <string name="size">Size</string>
    <string name="rate">Rate</string>
    <string name="rate_with_unit" translatable="false">%sGB</string>
    <string name="detail">Detail</string>
    <string name="read_more">Read more…</string>
    <string name="read_less">Read less…</string>
    <string name="detail_buy">Buy (₺%s)</string>
    <string name="purchase_is_successful">Purchase is successful.</string>
    <string name="search_for_categories">Search for categories…</string>
    <string name="category_not_found">Category not found.</string>
    <string name="username">Username</string>
    <string name="profile_image">Profile Image</string>
    <string name="example_game_value" translatable="false">30</string>
    <string name="example_wallet_value" translatable="false">₺20.5</string>
    <string name="games">Games</string>
    <string name="wallet">Wallet</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="theme_switch" translatable="false">Theme Switch</string>
    <string name="cart">Cart</string>
    <string name="buy_now">Buy Now (₺%s)</string>
    <string name="cart_item_image">Cart Item Image</string>
    <string name="price">Price</string>
    <string name="cart_item_add">Cart Item Add</string>
    <string name="cart_item_subtract">Cart Item Subtract</string>
    <string name="number_zero" translatable="false">0</string>
    <string name="no_items_found">No items found.</string>
    <string name="cart_is_empty">Cart is empty.</string>
    <string name="game_added_to_cart">Game added to cart.</string>
    <string name="view_cart">View Cart</string>
    <string name="delete">Delete</string>
    <string name="orders">Orders</string>
    <string name="order_code">Order Code</string>
    <string name="date">Date</string>
    <string name="total_with_value" translatable="false">₺%s</string>
    <string name="order_detail">Order Detail</string>
    <string name="total">Total</string>
    <string name="quantity_with_value">Quantity: %s</string>
    <string name="game_not_found">Game not found.</string>
    <string name="category_detail">Category Detail</string>
    <string name="permission_denied">Permission denied.</string>
    <string name="invoice">Invoice</string>
    <string name="phone_value">Phone: %s</string>
    <string name="fax_value">Fax: %s</string>
    <string name="invoice_no_with_value">Invoice No: %s</string>
    <string name="invoice_date_with_value">Date: %s</string>
    <string name="billed_to">Billed To:</string>
    <string name="qty">Qty</string>
    <string name="item">Item</string>
    <string name="amount">Amount</string>
    <string name="subtotal">Subtotal</string>
    <string name="tax">Tax</string>
    <string name="tax_rate_description">Tax rate is calculated as %s%%.</string>
    <string name="pdf_file_created">PDF file created.</string>
    <string name="failed_to_create_pdf_file">Failed to create PDF file.</string>
    <string name="view">View</string>
    <string name="you_need_a_pdf_app">You need a PDF reader to view this file.</string>
</resources>