<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp"
    android:paddingVertical="8dp">

    <ImageView
        android:id="@+id/cartItemImage"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:contentDescription="@string/cart_item_image"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/placeholder" />

    <TextView
        android:id="@+id/cartItemTitle"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ellipsize="end"
        android:text="@string/title"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/cartItemPrice"
        app:layout_constraintStart_toEndOf="@+id/cartItemImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cartItemPrice"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/cartItemTitle"
        app:layout_constraintTop_toBottomOf="@+id/cartItemTitle" />

    <LinearLayout
        android:id="@+id/cartItemPieceLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/cartItemTitle"
        app:layout_constraintTop_toBottomOf="@id/cartItemPrice">

        <ImageButton
            android:id="@+id/cartItemSubtractButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/cart_item_subtract"
            app:srcCompat="@drawable/baseline_remove_24" />

        <TextView
            android:id="@+id/cartItemPiece"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="16dp"
            android:gravity="center"
            android:text="@string/number_zero"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/cartItemAddButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/cart_item_add"
            app:srcCompat="@drawable/baseline_add_24" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/cartItemDeleteButton"
        android:layout_width="48dp"
        android:layout_height="64dp"
        android:background="@drawable/delete_button_background"
        android:contentDescription="@string/delete"
        android:src="@drawable/baseline_delete_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cartItemPieceLayout"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>