<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.DetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/design_default_color_primary"
        android:backgroundTint="@android:color/transparent"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/TextAppearance.Material3.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/game_details" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/detail_slider"
                android:layout_width="wrap_content"
                android:layout_height="280dp"
                android:contentDescription="@string/detail_slider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <me.relex.circleindicator.CircleIndicator
                android:id="@+id/detail_slider_indicator"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:elevation="4dp"
                app:layout_constraintBottom_toBottomOf="@id/detail_slider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/title"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_slider" />

            <TextView
                android:id="@+id/detail_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/category"
                app:layout_constraintStart_toStartOf="@id/detail_title"
                app:layout_constraintTop_toBottomOf="@id/detail_title" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/detail_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:background="@drawable/detail_info_background"
                android:paddingVertical="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_category">

                <TextView
                    android:id="@+id/detail_rate_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:text="@string/rate"
                    app:drawableTint="@color/app_green"
                    app:drawableTopCompat="@drawable/baseline_star_border_24"
                    app:layout_constraintEnd_toStartOf="@id/detail_size_info"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/detail_size_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:text="@string/size"
                    app:drawableTint="@color/app_green"
                    app:drawableTopCompat="@drawable/baseline_download_24"
                    app:layout_constraintEnd_toStartOf="@id/detail_category_info"
                    app:layout_constraintStart_toEndOf="@id/detail_rate_info"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/detail_category_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:text="@string/category"
                    app:drawableTint="@color/app_green"
                    app:drawableTopCompat="@drawable/baseline_apps_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/detail_size_info"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/detail_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_info" />

            <TextView
                android:id="@+id/detail_desc_read_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:paddingVertical="16dp"
                android:text="@string/read_more"
                android:textColor="@color/app_green"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/detail_description"
                app:layout_constraintTop_toBottomOf="@id/detail_description" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/detail_buy"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:text="@string/buy"
        android:textColor="@color/white" />
</LinearLayout>