<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:orientation="vertical">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/gameCover"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginVertical="16dp"
        android:background="@drawable/game_cover_border"
        android:contentDescription="@string/game_cover"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/gameAvatar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginVertical="16dp"
        android:background="@drawable/game_cover_border"
        android:contentDescription="@string/game_cover"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder"
        app:layout_constraintStart_toStartOf="@id/gameCover"
        app:layout_constraintTop_toBottomOf="@id/gameCover"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent" />

    <TextView
        android:id="@+id/gameTitle"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:maxLines="2"
        android:text="@string/top_games"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/gameAvatar"
        app:layout_constraintTop_toTopOf="@id/gameAvatar" />

    <TextView
        android:id="@+id/gameCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/top_games"
        app:layout_constraintStart_toEndOf="@id/gameAvatar"
        app:layout_constraintTop_toBottomOf="@id/gameTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/gameBuyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/gameCover"
        app:layout_constraintTop_toTopOf="@id/gameAvatar" />

</androidx.constraintlayout.widget.ConstraintLayout>